Inserted plenty of @Notnull Annotations & Removed redundant codes,may be buggy this version # TODO Check if there is any buggy functions Implement test units Enhance metadata reader stylesheet Fix the saving issue of ImageUtils